# las-rasterizer

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  test.tif
.github/workflows/: rust.yml
src/: binning.rs  error.rs  main.rs  triangulation.rs  util.rs
