[package]
name = "las_rasterizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.8"
gdal = { version = "0.18.0" }
las = { version = "0.9.5", features = ["laz-parallel"] }
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
spade = "2.13"
thiserror = "2.0"
